crates/core/talkbank-parser/src/parser/tier_parsers/snapshots/talkbank_parser__parser__tier_parsers__dependent_tier__snapshot_tests__custom_x_tier.snap
---
source: talkbank-tree-sitter-parser/src/parser/tier_parsers/dependent_tier.rs
expression: result
---
Ok(
    UserDefinedTier {
        label: UserDefinedTierLabel(
            "xmor",
        ),
        content: "custom morphological data",
    },
)
