crates/core/talkbank-parser/src/parser/tier_parsers/snapshots/talkbank_parser__parser__tier_parsers__dependent_tier__snapshot_tests__error_missing_colon.snap
---
source: talkbank-tree-sitter-parser/src/parser/tier_parsers/dependent_tier.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: MalformedTierHeader,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                },
                context: ErrorContext {
                    source_text: "%mor\tpro|I v|go .",
                    span: Span {
                        start: 0,
                        end: 17,
                    },
                    expected: [],
                    found: "%mor\tpro|I v|go .",
                },
                message: "Dependent tier missing colon separator",
                suggestion: Some(
                    "Format: %tiertype:\\tcontent (e.g., %mor:\\tpro|I v|go&PAST .)",
                ),
                help_url: Some(
                    "https://talkbank.org/errors/E602",
                ),
            },
        ],
    },
)
