crates/core/talkbank-parser/src/parser/tier_parsers/snapshots/talkbank_parser__parser__tier_parsers__dependent_tier__snapshot_tests__mor_tier_complex.snap
---
source: talkbank-tree-sitter-parser/src/parser/tier_parsers/dependent_tier.rs
expression: result
---
Ok(
    UserDefinedTier {
        label: UserDefinedTierLabel(
            "mor",
        ),
        content: "adv|ahora=now vimpsh|pega=hit_adhere&2S-IMP~pro:clit|3S~pro:clit|OBJ&FEM&PL .",
    },
)
